# ex-int-tcl-shvfslib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: BuildTclStatic.cmake
src/: app.c
